Add keycloak rest api features