@@ -15,6 +15,7 @@ import org.keycloak.representations.idm.UserRepresentation;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Service
@@ -35,7 +36,8 @@ public class KeyCloakServiceImpl implements KeyCloakService {
         userRepresentation.setUsername(authorization.getUsername());
         userRepresentation.setEmail(authorization.getEmail());
         userRepresentation.setEnabled(true);
-        userRepresentation.setCredentials(List.of(credential));
+        userRepresentation.setEmailVerified(true);
+        userRepresentation.setCredentials(Collections.singletonList(credential));
 
         UsersResource userResource = keycloak.realm(realm).users();
 
@@ -47,12 +49,12 @@ public class KeyCloakServiceImpl implements KeyCloakService {
     private void addRealmToRole(String username, String roleName) {
         RealmResource realmResource = keycloak.realm(realm);
 
-        List<UserRepresentation> userRepresentations = realmResource.users().search(username);
+        List<UserRepresentation> userRepresentations = realmResource.users().search(username, true);
 
         UserResource userResource = realmResource.users().get(userRepresentations.get(0).getId());
         RoleRepresentation roleRepresentation = realmResource.roles().get(roleName).toRepresentation();
         RoleMappingResource roleMappingResource = userResource.roles();
-        roleMappingResource.realmLevel().add(List.of(roleRepresentation));
+        roleMappingResource.realmLevel().add(Collections.singletonList(roleRepresentation));
     }
 
     private CredentialRepresentation createCredentials(String password) {
@@ -62,5 +64,27 @@ public class KeyCloakServiceImpl implements KeyCloakService {
         credentialRepresentation.setValue(password);
 
         return credentialRepresentation;
+    }
+
+    @Override
+    // Метод сбрасывает пароль пользователя. Если всё ок, тогда скидываем пароль и возвращаем пользователя
+    public boolean resetPassword(String userID, String password) {
+        try {
+            UsersResource usersResources = keycloak.realm(realm).users();
+            UserRepresentation toUserRepresentation = usersResources.search(userID).get(0);
+            UserResource curUserResource = usersResources.get(toUserRepresentation.getId());
+
+            CredentialRepresentation credentialRepresentation = new CredentialRepresentation();
+            credentialRepresentation.setType(CredentialRepresentation.PASSWORD);
+            credentialRepresentation.setValue(password);
+            credentialRepresentation.setTemporary(false);
+
+            curUserResource.resetPassword(credentialRepresentation);
+        } catch (Exception exception) {
+            System.out.println(exception.getMessage());
+            return false;
+        }
+
+        return true;
     }
 }
